# dotnet-to-rust-bindgen-experiments

./: README.md
cbindgen_clangsharp/: Cargo.toml  README.md  justfile
cbindgen_clangsharp/dotnet/src/Picky/: Hash.cs
cbindgen_clangsharp/dotnet/src/Picky/Native/: Raw.cs
cbindgen_clangsharp/include/: picky.h
com/: Cargo.toml
com/dotnet/sample/: ComClient.csproj  Program.cs
com/src/: lib.rs
diplomat/: Cargo.toml  dotnet-interop-conf.toml  generate.sh  install_diplomat.sh  justfile
diplomat/cpp/: PickyError.h  PickyError.hpp  PickyPem.h  PickyPem.hpp  result_box_PickyPem_box_PickyError.h  result_void_box_PickyError.h  test.cpp
diplomat/dotnet/: Picky.sln
diplomat/dotnet/src/Picky/: DiplomatRuntime.cs  Picky.csproj  PickyError.cs  PickyException.cs  PickyPem.cs  Raw.cs  Raw.rs  Utils.cs
diplomat/dotnet/src/PickyCLI/: PickyCLI.csproj  Program.cs
diplomat/dotnet/tests/Picky.Tests/: PemTest.cs  PemTests.cs  SshTests.cs
diplomat/src/: error.rs  helper.rs  key.rs  lib.rs  pem.rs  signature.rs  ssh.rs
interoptopus/: Cargo.toml
interoptopus/csharp/: Picky.cs
interoptopus/dotnet/: Picky.cs
interoptopus/src/: helper.rs  lib.rs  pem.rs
interoptopus/tests/: bindings.rs
