[package]
name = "picky-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "picky"
crate-type = ["staticlib", "cdylib"]

[dependencies]
picky = "6.3.0"
diplomat = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
diplomat-runtime = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
