[package]
name = "picky-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "picky"
crate-type = ["staticlib", "cdylib"]

[dependencies]
picky = { git = "https://github.com/Devolutions/picky-rs", rev = "cc4bdc6", features = ["ssh", "time_conversion"] }
diplomat = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
diplomat-runtime = { git = "https://github.com/CBenoit/diplomat.git", branch = "csharp-backend" }
